--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -627,40 +627,21 @@ margin-top:30px;
 	display: flex;
   margin: 5px;
   height: auto;
-  margin-bottom: 10px;
-}
-
-.img-folio {
-	display: block;
-  max-width: 180px;
-	max-height: 120px;
-  height: auto;
+  margin-bottom: 0px;
 }
 
 .card-deck .card {
-  margin-bottom: 15px;
+  margin-bottom: 0px;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: .5rem;
 }
-@media (min-width: 992px) {
-  .card-deck {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-  }
-  .card-deck .card {
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-    margin-right: 15px;
-    margin-bottom: 0;
-    margin-left: 15px;
-  }
+.card-deck .card-img-top {
+  width: 100%;
+  height: 25vh;
+  object-fit: cover;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 767px) {
   .card-deck {
     display: -ms-flexbox;
     display: flex;
@@ -676,13 +657,13 @@ margin-top:30px;
     margin-bottom: 0;
     margin-left: 15px;
   }
-}
-.card-img-top {
-  width: 100%;
-  height: 20vh;
-  object-fit: cover;
+	.card-deck .card-img-top {
+	  width: 100%;
+	  height: 35vh;
+	  object-fit: cover;
+	}
 }
 
 .card {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
