added user profile page

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -2,24 +2,13 @@
 {% block title %}汪汪喵喵{% endblock %}
 {% block content %}
 
-
+<!-- ==== SPACING ==== -->
 <div class="spacer">
   &nbsp;
 </div>
 
-<!-- ==== HEADERWRAP ==== -->
-<div id="home-section">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1>北美宠物论坛</h1>
-        <p>有关宠物的一切话题</p>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- /headerwrap -->
+
 
 <!-- ==== NEEDTOKNOW ==== -->
 
