--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -50,6 +50,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#contact">联系我们</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/user_01">登陆</a>
+            </li>
 
           </ul>
         </div>
