--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -220,12 +220,16 @@
 
           <div class="col-lg-3">
             <div class="card">
-              <img class="card-img-profile" src="/static/img/portfolio/bianbizi2.jpg" alt="">
+              <div class="card-body" >
+              <img class="card-img-profile" src="/static/img/portfolio/bianbizi2.jpg" alt="" >
+              </div>
             </div>
           </div>
           <div class="col-lg-3">
             <div class="card">
+              <div class="card-body">
               <img class="card-img-profile" src="/static/img/portfolio/bianbizi.jpeg" alt="">
+              </div>
             </div>
           </div>
 
